--- a/bwapp/client/views/gentask.ng.jade
+++ b/bwapp/client/views/gentask.ng.jade
@@ -2,6 +2,11 @@
   * Module: gentask.ng.jade
   * Created by wjwong on 10/5/15.
   =========================================================*/
+.row-fluid(ng-show='!dataloaded')
+  #loadoverlay.container-fluid
+    #loadoverlay-image.text-center(style="position:fixed;top:50%;left:50%; color:#23b7e5;")
+      i.fa.fa-4x.fa-spin.fa-cube
+      h3(style="color:#23b7e5;") Loading...
 toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'close-button':true}")
 .container-fluid(ng-if='!report')
   accordion(ng-if='taskdata.tasktype == "action"')
