--- a/bwapp/client/views/gentask.ng.jade
+++ b/bwapp/client/views/gentask.ng.jade
@@ -55,7 +55,8 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
         button.btn.btn-primary(ng-if='taskidx > 0', ng-click='itrAnnot(notes,-1)') Prev
         button.btn.btn-primary(ng-if='workerId && hitId && notes[0].length > 9 && (notes[1] == undefined || notes[1].length > 9) && (notes[2] == undefined || notes[2].length > 9) && taskidx+1 == taskdata.idxlist.length && !submitter', ng-click='itrAnnot(notes, 1)') Submit
         button.btn.btn-primary(ng-if='(workerId && hitId && (notes[0].length > 9 && (notes[1] == undefined || notes[1].length > 9) && (notes[2] == undefined || notes[2].length > 9) && taskidx+1 < taskdata.idxlist.length) || (submitter && taskidx+1 < taskdata.idxlist.length))', ng-click='itrAnnot(notes, 1)') Next
-
+        h4(ng-if='!(workerId && hitId) && !submitter') Please accept HIT to start
+        
   .row-fluid.well.col-sm-12(ng-if='!assignmentId')
     .col-sm-12
       h3(style='color: red') This Job is unavailable.
