--- a/bwapp/client/views/genjobs.ng.jade
+++ b/bwapp/client/views/genjobs.ng.jade
@@ -117,14 +117,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
       accordion-heading
         h4.panel-title
           i.fa.fa-file-text-o
-          | &nbsp; Job {{jobinfo._id}} Information
-      .mb 
-        | Task Type:
-        i  {{jobinfo.tasktype | uppercase}} &nbsp;&nbsp; 
-        | State:
-        i  {{jobinfo.stateid}} &nbsp;&nbsp; 
-        | Bundle:
-        i  {{jobinfo.bundle}}
+          | &nbsp; Job Information
       table.table.table-condensed#listgames(ng-if='dataloaded', datatable="ng", dt-options="dtOptionsTask")
         thead
           tr
@@ -140,4 +133,28 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
               | &nbsp;{{task._id}}
             td
               span(ng-repeat='hit in task.hitlist') {{hit}} &nbsp;
-              //-div(ng-repeat='(k,v) in task.submitted', ng-click="$state.go('gentask',{taskId: task._id, workerId: k, report: 1})") {{k}} {{v.time | date:"MM/dd/yyyy H:m"}}
+.row
+  accordion.col-sm-12
+    accordion-group.panel-primary.shadowbox(ng-if='doneHITs', ng-init="isOpen = true", is-open="isOpen")
+      accordion-heading
+        h4.panel-title
+          i.fa.fa-flag-checkered
+          | &nbsp; Finished HITs
+      table.table.table-condensed#listgames(ng-if='dataloaded', datatable="ng", dt-options="dtOptionsTask")
+        thead
+          tr
+            th Time
+            th HIT Id
+            th Task Id
+            th Turker
+        tbody
+          tr(ng-repeat='task in doneHITs')
+            td {{task.time | date:"MM/dd/yyyy H:mm"}}
+            td {{task.hid}}
+            td(ng-click="$state.go('gentask',{taskId: task.tid, assignmentId: 'ASSIGNMENT_ID_NOT_AVAILABLE', workerId: 'EXAMPLE'})")
+              i.fa.fa-eye
+              | &nbsp;{{task.tid}}
+            td(ng-click="$state.go('gentask',{taskId: task.tid, workerId: task.name, hitId: task.hid, report: 1})")
+              i.fa.fa-eye
+              | &nbsp;{{task.name}} 
+   
