--- a/bwapp/client/views/genjobs.ng.jade
+++ b/bwapp/client/views/genjobs.ng.jade
@@ -168,16 +168,18 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
               i.fa.fa-eye
               | &nbsp;{{task.tid}}
             td
-              span(ng-repeat='n in task.names', ng-click="stateGo('gentask',{taskId: task.tid, workerId: n, hitId: task.hid, report: 1}, true)")
-                i.fa.fa-eye
-                | &nbsp;{{n}}
+              span(ng-repeat='n in task.names')
+                button.btn.btn-xs.btn-default(ng-click="stateGo('gentask',{taskId: task.tid, workerId: n, hitId: task.hid, report: 1}, true)")
+                  i.fa.fa-eye
+                  | &nbsp;{{n}}
+                | &nbsp;&nbsp;
 .row
   accordion.col-sm-12
     accordion-group.panel-primary.shadowbox(ng-if='doneHITs', ng-init="isOpen = true", is-open="isOpen")
       accordion-heading
         h4.panel-title
           i.fa.fa-flag-checkered
-          | &nbsp; Finished HITs
+          | &nbsp; Finished Assignment
       table.table.table-condensed#listgames(ng-if='dataloaded', datatable="ng", dt-options="dtOptionsTask")
         thead
           tr
