--- a/bwapp/client/views/genjobs.ng.jade
+++ b/bwapp/client/views/genjobs.ng.jade
@@ -36,19 +36,19 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
           h4.panel-title
             i.fa.fa-edit
             | &nbsp; Create Job
-        .row-fluid.col-sm-8(style='padding-left: 0px;margin-left: -30px;')
+        .row-fluid.col-sm-12(style='padding-left: 0px;margin-left: -30px;')
           #imgpreview
-        .row-fluid.col-sm-4(style='padding-left: 30px;')
+        .row-fluid.col-sm-12(style='padding-left: 30px;')
           | ID: 
           b {{curState._id}}
-          br
+          | &nbsp;&nbsp;&nbsp;
           | Name: 
           b {{curState.name}}
           br
           | # Blocks: {{curState.block_meta.blocks.length}}
-          br
+          | &nbsp;&nbsp;&nbsp;
           | # Moves: {{curState.block_states.length}}
-          br
+          | &nbsp;&nbsp;&nbsp;
           | Created: {{curState.created | date:"MM/dd/yyyy"}}
         .row-fluid.col-sm-12
           form.form-inline.ng-pristine.ng-valid(name='createJobForm', ng-submit='taskGen(tasktype, movedir, bundle, asncnt, antcnt)')
