--- a/bwapp/client/views/gentask.ng.jade
+++ b/bwapp/client/views/gentask.ng.jade
@@ -22,15 +22,22 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
         label.mb-sm(style='border: 1px solid #dde6e9; border-radius: 4px; padding: 6px 16px;') Slide block 14 straight down until its right corner touches the top left corner of block 17.
         label.mb-sm(style='border: 1px solid #dde6e9; border-radius: 4px; padding: 6px 16px;') Take the block that is on top of block 5. Move it close to block 17. Place it at the same level with block 17 and on the same vertical line as block 5.
 
+  accordion
+    accordion-group.panel-primary
+      accordion-heading
+        h4.panel-title Logo Key
+      span(ng-repeat='l in logolist', style='display:inline-block;padding-right:6px')
+        img(src='{{l.imgref}}', height='64', width='64')
+        div
+          label {{l.name | uppercase}}
+
   .row-fluid.well.col-sm-12(ng-if='taskdata.tasktype == "action"')
     .col-sm-12(ng-if='submitter')
       .label.label-warning Read Only
       i(ng-if='submitter.time', style='font-size: 1.1em') &nbsp;&nbsp;Job submitted on {{submitter.time | date:"MM/dd/yyyy H:m"}}
-    .col-sm-5
+    .col-sm-6
       #statea
-    .col-sm-1(style="margin-top: 2em; font-size: 48px;")
-      .fa.fa-chevron-right
-    .col-sm-5
+    .col-sm-6
       #stateb
     .col-sm-12
       hr
