update sort order for review block

--- a/bwapp/client/views/gentask.ng.jade
+++ b/bwapp/client/views/gentask.ng.jade
@@ -23,7 +23,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
         label.mb-sm(style='border: 1px solid #dde6e9; border-radius: 4px; padding: 6px 16px;') Take the block that is on top of block 5. Move it close to block 17. Place it at the same level with block 17 and on the same vertical line as block 5.
 
   accordion
-    accordion-group.panel-primary
+    accordion-group.panel-info(is-open='true')
       accordion-heading
         h4.panel-title Logo Key
       span(ng-repeat='l in logolist', style='display:inline-block;padding-right:6px')
