--- a/bwapp/client/views/gentask.ng.jade
+++ b/bwapp/client/views/gentask.ng.jade
@@ -14,7 +14,6 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
       accordion-heading
         h4.panel-title Directions
       h4(style='margin-top: -14px; margin-bottom: 4px;') What would you tell a friend to do in a world with objects in the first image in order to obtain the configuration in the second image?  Use each text box to write a distinct full (single/multi) sentence alternative.
-        .fa.fa-exclamation-triangle(style='color:red') Ensure each alternative is different.
       .well.col-sm-8.col-sm-offset-2
         h4(style='margin-top: -14px; margin-bottom: 4px;') Example:
         img.center-block(src='img/example.png')
@@ -41,6 +40,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
       #stateb
     .col-sm-12
       hr
+      .fa.fa-exclamation-triangle(style='color:red') Ensure each textbox description is DIFFERENT.
     h4.pull-left {{taskidx+1}}/{{taskdata.idxlist.length}}
     .col-sm-11
       form(name='submitForm', action='{{submitTo}}', method='post')
