--- a/bwapp/client/views/gentask.ng.jade
+++ b/bwapp/client/views/gentask.ng.jade
@@ -40,7 +40,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
       #stateb
     .col-sm-12
       hr
-      .fa.fa-exclamation-triangle(style='color:red') Ensure each alternative description is DIFFERENT.
+      .fa.fa-exclamation-triangle(style='color:red') There are 3 descriptions entries.  Ensure each alternative description is DIFFERENT.
     h4.pull-left {{taskidx+1}}/{{taskdata.idxlist.length}}
     .col-sm-11
       form(name='submitForm', action='{{submitTo}}', method='post')
