--- a/bwapp/client/views/genworld.ng.jade
+++ b/bwapp/client/views/genworld.ng.jade
@@ -6,10 +6,12 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
 .row-fluid.col-sm-12
   .row.mb-sm(ng-show='!curState.block_meta.blocks')
     .content.col-sm-3
-      button.btn.btn-default(ng-show='showLogos', ng-click='showLogos=false')
-        .fa.fa-toggle-on &nbsp;On Logos
-      button.btn.btn-default(ng-show='!showLogos', ng-click='showLogos=true')
-        .fa.fa-toggle-off &nbsp;Off Logos
+      button.btn.btn-default(ng-click='opt.showImages=!opt.showImages')
+        .fa.fa-toggle-on(ng-show='opt.showImages') &nbsp;On Images
+        .fa.fa-toggle-off(ng-show='!opt.showImages') &nbsp;Off Images
+      button.btn.btn-default(ng-if='opt.showImages', ng-click='opt.showLogos=!opt.showLogos')
+        .fa.fa-toggle-on(ng-show='opt.showLogos') &nbsp;On Logos
+        .fa.fa-toggle-off(ng-show='!opt.showLogos') &nbsp;Off Logos
   div(ng-show='curState.block_meta.blocks')
     h4 Active State: {{curState._id}}
     h4 # Moves: {{curState.block_states.length}} &nbsp; # Blocks: {{curState.block_meta.blocks.length}}
@@ -80,10 +82,9 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
   .row-fluid.col-sm-2(ng-if='!isgen && !enableImpSave && curState._id && curState.block_meta.blocks && curState.block_states.length < 20')
     div.well
       h4 Create Block Moves
-      button.btn.btn-default.mb-sm(ng-show='!limStack', ng-click='limStackToggle()', style='margin-left: -14px;', title='Stacking is unlimited')
-        .fa.fa-toggle-off &nbsp;Off Limit
-      button.btn.btn-default.mb-sm(ng-show='limStack', ng-click='limStackToggle()', style='margin-left: -14px;', title='Stacking is limited to 2')
-        .fa.fa-toggle-on &nbsp;On Limit
+      button.btn.btn-default.mb-sm(ng-click='opt.limStack = !opt.limStack', style='margin-left: -14px;')
+        .fa.fa-toggle-off(ng-show='!opt.limStack', title='Stacking is unlimited') &nbsp;Off Limit
+        .fa.fa-toggle-on(ng-show='opt.limStack', title='Stacking is limited to 2') &nbsp;On Limit
       br
       small(style='color: red') *Appends to moves
       form.form-inline.ng-pristine.ng-valid(name='moveform', ng-submit='startMove(mvcnt)')
