working update meteor 1.2

--- a/bwapp/client/angle/less/app/bootstrap-reset.import.less
+++ b/bwapp/client/angle/less/app/bootstrap-reset.import.less
@@ -2,7 +2,7 @@
    Component: bootstrap-reset.less
  ========================================================================== */
 
-@import (less, reference) "../../../../public/vendor/fontawesome/css/font-awesome.min.css";
+@import "../../../../public/vendor/fontawesome/css/font-awesome.min.css";
 
 
 [ng\:cloak], 
