--- a/bwapp/client/views/main.ng.jade
+++ b/bwapp/client/views/main.ng.jade
@@ -15,7 +15,7 @@ div(style="top: 118px; width: 100%;  height: 600px;  position: relative;  margin
           .pull-right
             // Change this button type to submit to send the form data
             button.btn.btn-sm.btn-primary(type="button", style="list-style-type: none;")
-              meteor-include(src="_loginButtons")
+              blaze-template(name="_loginButtons")
 
   // END panel
   .p-lg.text-center
