--- a/bwapp/client/views/partials/top-navbar.ng.jade
+++ b/bwapp/client/views/partials/top-navbar.ng.jade
@@ -80,7 +80,7 @@ nav.navbar.topnavbar(role="navigation")
                 | &nbsp;Tasks
       li
         a
-          meteor-include(src="_loginButtons")
+          blaze-template(name="_loginButtons")
         //-a(toggle-state="offsidebar-open", no-persist="no-persist")
            em.icon-notebook
       // END Offsidebar menu
