bootstrap angular datatables.

--- a/bwapp2/client/views/genjobs.ng.jade
+++ b/bwapp2/client/views/genjobs.ng.jade
@@ -152,7 +152,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
       table.table.table-condensed#listgames(ng-if='dataloaded', datatable="ng", dt-options="dtOptionsTask")
         thead
           tr
-            th Time
+            th Created
             th HIT Id
             th #Assign
             th Task Id
@@ -184,7 +184,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
       table.table.table-condensed#listgames(ng-if='dataloaded', datatable="ng", dt-options="dtOptionsTask")
         thead
           tr
-            th Time
+            th Done
             th HIT Id
             th Task Id
             th Turker
@@ -217,7 +217,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
       table.table.table-condensed#listgames(ng-if='dataloaded', datatable="ng", dt-options="dtOptionsTask")
         thead
           tr
-            th Time
+            th Done
             th HIT Id
             th Task Id
             th Turker
