provide processing update for saving.

--- a/bwapp2/client/views/app.ng.jade
+++ b/bwapp2/client/views/app.ng.jade
@@ -14,7 +14,7 @@ header.topnavbar-wrapper(ng-include="'client/views/partials/top-navbar.html'")
     #loadoverlay.container-fluid
       #loadoverlay-image.text-center(style="position:fixed;top:50%;left:50%; color:#23b7e5;")
         i.fa.fa-4x.fa-spin.fa-cube
-        h3(style="color:#23b7e5;") Loading...
+        h3(style="color:#23b7e5;") Processing...
   section(style='margin-left:0px')
     // Page content
     .content-wrapper(ui-view="", autoscroll="false", ng-class="app.viewAnimation")
