show time in group jobs

--- a/bwapp2/client/views/genjobs.ng.jade
+++ b/bwapp2/client/views/genjobs.ng.jade
@@ -29,7 +29,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
               td(title="'Name'", filter="{ name: 'text'}", sortable="'name'", ng-click='chooseState(s._id)')
                 | {{s.name}}
               td(title="'Created'", sortable="'created'", ng-click='chooseState(s._id)')
-                | {{s.created | date:"MM/dd/yyyy"}}
+                | {{s.created | date:"MM/dd/yyyy H:mm"}}
     accordion.col-sm-6(ng-show='curState._id')
       accordion-group.panel-primary.shadowbox(ng-init="isOpen = true", is-open="isOpen")
         accordion-heading
