--- a/bwapp2/client/views/genjobs.ng.jade
+++ b/bwapp2/client/views/genjobs.ng.jade
@@ -141,7 +141,10 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
               | &nbsp;{{task._id}}
             td Ent: {{task.idxlist.length}} &nbsp;&nbsp; Ant: {{task.antcnt}} &nbsp;&nbsp; Asn: {{task.asncnt}}
             td
-              span(ng-repeat='hit in task.hitlist') {{hit}} &nbsp;
+              span(ng-repeat='hit in task.hitlist')
+                button.btn.btn-xs.btn-danger(ng-click='remHIT(task._id, hit)')
+                  .fa.fa-remove
+                | {{hit}} &nbsp;&nbsp;
 .row
   accordion.col-sm-12
     accordion-group.panel-primary.shadowbox(ng-if='allHITs.active.length', ng-init="isOpen = true", is-open="isOpen")
